tests/machine/x/cobol/string_concat.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/string_concat.cob:6: error: syntax error, unexpected +

