tests/machine/x/cobol/string_concat.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. STRING_CONCAT.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       PROCEDURE DIVISION.
       DISPLAY "hello " + "world"
       STOP RUN.
